Update Settings to 1.9.1 and Change Base64